Fix tag hover color in dark mode

--- a/client/bootstrap/extra.css
+++ b/client/bootstrap/extra.css
@@ -1,1 +1,2 @@
 .dark .label.label-default { color: #fff; }
+.dark .label.label-default:hover { color: #000; }
